# teleport

./: Cargo.toml  LICENSE.TXT  README.md  teleport.toml
assets/static/: teleport.css
assets/templates/: claim.html.template  claimed.html.template  error.html.template  index.html.template  retrieve.html.template
src/: error.rs  main.rs  passphrase.rs  store.rs
