[package]
name = "teleport"
version = "0.1.0"
edition = "2021"

[dependencies]
form_urlencoded = "1"
futures = "0.3"
hex = "0.4"
http = "0.2"
log = "0.4"
nix = "0.24"
once_cell = "1"
pretty_env_logger = "0.4"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
sodiumoxide = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
warp = { version = "0.3", features = ["tls", "multipart"], default-features=false }
zip = { version = "0.6", features = ["deflate-zlib"], default-features=false }
